# unity3d-mcp

./: .agravrules  .cursorignore  .gitignore  .mcpbignore  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FASTMCP_2.13_UPGRADE_REPORT.md  FASTMCP_3.2_UPGRADE_REPORT.md  INSTALL.md  LICENSE  README.md  REPO_STATUS.md  RUNT_RESCUE_PLAN.md  build.ps1  docker-compose.yml  extension.toml  extension.wasm  glama.json  install-mcp.ps1  justfile  justfile.bak  lint_errors.txt  lint_errors_remaining.txt  llms-full.txt  llms.txt  manifest.json  mcp_config.json  mcpb.json  pyproject.toml  requirements.txt  start.ps1  start.ps1.bak.20260508_202351  test_portmanteau.py  unity3d-mcp-backend.spec  verify_vrchat_import.py  (+2 more)
.cursor/rules/: general.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
_llm_test_scripts/: test_portmanteau.py
docs/: API_REFERENCE.md  ARCHITECTURE_DUAL_MODE.md  COMPETITIVE_ANALYSIS.md  COMPLETE_DOCUMENTATION_STRUCTURE.md  DOCKER.md  DOCUMENTATION_INDEX.md  DUAL_MODE.md  FLEET_PIPELINE.md  GUIDE_EDITOR_AUTO.md  GUIDE_VRCHAT_PIPELINE.md  IMPORT_EXPORT.md  MONITORING.md  ORGANIZATION_SUMMARY.md  README.md  ROADMAP.md  repository-analysis-2025-10-25.md  repository-analysis-2025-10-26.md  status_report.md  windsurf_assessment.md
docs/development/: AI_DEVELOPMENT_RULES.md  AI_DEVELOPMENT_TOOLS_COMPARISON.md  DEBUGGING_LESSONS_LEARNED.md  DEVELOPMENT_PAIN_POINTS.md  FILE_VALIDATION_COMPLETE.md  FILE_VALIDATION_GUIDE.md  LINK_PARSER_FIX.md  MCP_SYNC_DEBUGGING_GUIDE.md  PYTHON_DEPENDENCY_HELL_FIX.md  PYTHON_SNIPPETS_USAGE_GUIDE.md  README.md  SYNC_HEALTH_IMPROVEMENTS_SUMMARY.md  SYNC_HEALTH_INTEGRATION.md  SYSTEMATIC_PROJECT_UPDATES.md
docs/mcp-technical/: MCP_PRODUCTION_CHECKLIST.md  README.md
examples/: __init__.py  server_composition.py
mcpb/: requirements.txt
mcpb/assets/prompts/: build_deployment.md  game_development.md  performance_optimization.md  system.md  troubleshooting.md  vrchat_integration.md  vrm_avatar_pipeline.md
mcpb/server/: server.py
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail.yml
native/: Cargo.toml  build.ps1  build.ps1.20260618-172844.bak  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs  backend.rs.20260617-014834.bak  main.rs
native/windows/: hooks.nsh
promo/: SCRIPT.md  STORYBOARD.md  VEO_GENERATION_GUIDE.md
prompts/: build_deployment.md  examples.json  game_development.md  performance_optimization.md  system.md  troubleshooting.md  user.md  vrchat_integration.md  vrm_avatar_pipeline.md
scripts/: FleetStartMode.ps1.20260610-031123.bak  PortHelpers.ps1  backup-repo.ps1  cua-nsis-config.json  cua-smoke.py  fix-standards.ps1  fleet_pipeline.py  pack.ps1  run-fleet-pipeline.ps1  run-tests.ps1  smoke_test.py
skills/unity-editor-automation/: SKILL.md
skills/unity3d-fleet-mesh/: SKILL.md
skills/vrc-avatar-pipeline/: SKILL.md
src/: lib.rs
src/unity3d_mcp/: __init__.py  __main__.py  app.py  http_server.py  server.bak  server.py  transport.py
src/unity3d_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/unity3d_mcp/assets/: __init__.py
src/unity3d_mcp/avatar/: __init__.py
src/unity3d_mcp/core/: __init__.py
src/unity3d_mcp/resources/: MCPBridge.cs
src/unity3d_mcp/tools/: __init__.py  import_export_manager.py  motor_manager.py  vrm_avatar_manager.py
src/unity3d_mcp/tools/portmanteau/: __init__.py  platform.py  unity_api.py  unity_api_bridge.py  unity_asset.py  unity_avatar.py  unity_bridge.py  unity_build.py  unity_core.py  unity_disk_ops.py  unity_import.py  unity_jobs.py  unity_render.py  unity_scene.py  unity_validation.py  unity_vision_refine.py  vrchat.py  worldlabs.py
src/unity3d_mcp/utils/: __init__.py  execution_mode.py  fleet_import.py  fleet_pipeline.py  job_queue.py  logging_setup.py  platform_audit.py  scene_validator.py  simulation_runner.py  structured_logging.py  telemetry.py  unity_runtime.py  vision_refine.py
src/unity3d_mcp/vrchat/: __init__.py
src/unity3d_mcp/workflows/: virtual_robotics.yaml
src/unity3d_mcp/worldlabs/: __init__.py
tests/: conftest.py  test_basic.py  test_core.py  test_fleet_pipeline.py  test_integration.py  test_phase1_tools.py  test_phase2_tools.py  test_phase3_tools.py  test_phase4_tools.py  test_phase5_tools.py  test_server.py  test_unity_controller.py  test_vrchat.py  test_vrm_pipeline.py
tests/e2e/: __init__.py  conftest.py  test_vrm_unity_load.py
tests/fixtures/: README.md  __init__.py  factories.py
tests/unit/: __init__.py  conftest.py  test_platforms.py  test_univrm.py  test_worldlabs.py
web_sota/: index.html  package-lock.json  package.json  playwright.config.ts  start.bat  start.ps1  start.ps1.bak.20260508_202351  tsconfig.app.json  vite.config.ts
web_sota/backend/: server.py
web_sota/e2e/: smoke.spec.ts
web_sota/src/: App.tsx
web_sota/src/api/: mcp.ts
web_sota/src/common/: apps-catalog.ts
web_sota/src/components/layout/: sidebar.tsx
web_sota/src/pages/: Logging.tsx  agent-tools.tsx  apps.tsx  avatar-pipeline.tsx  chat.tsx  dashboard.tsx  help.tsx  hierarchy.tsx  mesh.tsx  plugin-manager.tsx  script-console.tsx  settings.tsx  status.tsx  tools.tsx
