[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[project]
name = "schip-mcp-unity3d"
version = "1.4.0"
description = "Unity 3D MCP Server - Comprehensive Unity automation with VRM avatar pipeline and VRChat integration"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Sandra Schipal", email = "sandra@schipal.at" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: 3D Modeling"
]
keywords = ["unity3d", "mcp", "vrm", "vrchat", "avatar", "automation", "fastmcp"]

dependencies = [
    "fastmcp>=3.2.0,<4",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0",
    "asyncio-mqtt>=0.11.0",
    "python-osc>=1.8.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pathlib",
    "typing-extensions>=4.0.0",
    "structlog>=23.0.0",
    "httpx>=0.27.0",
    "UnityPy>=1.20.0",
    "prefab-ui>=0.14.0",
    "fastapi>=0.136.1",
]



[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.2",
    "mypy>=1.0.0"
]
monitoring = [
    "prometheus-client>=0.21.0",
]
apps = [
    "prefab-ui>=0.1.0"
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0"
]

[project.urls]
"Homepage" = "https://github.com/sandraschi/unity3d-mcp"
"Bug Reports" = "https://github.com/sandraschi/unity3d-mcp/issues"
"Source" = "https://github.com/sandraschi/unity3d-mcp"
"Documentation" = "https://github.com/sandraschi/unity3d-mcp/blob/main/README.md"

[project.scripts]
unity3d-mcp = "unity3d_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.hatch.build.targets.wheel]
packages = ["src/unity3d_mcp"]

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["src/unity3d_mcp"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
